# synthetic-focus-groups

./: .gitignore  CODEX_TASK.md  CODEX_TASK_2.md  CODEX_TASK_3.md  CODEX_TASK_4.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CNAME  METHODOLOGY.md  PERSONA_ENGINE_RESEARCH.md  PRODUCT_SPEC.md  index.html
docs/survey/: index.html
outputs/: scorecard_test.html  stress_test_16p_deathtech.html  stress_test_v2_16p_deathtech.html  test_8p_report.html
src/: debug_scores.py  demo.py  report.html
src/analysis/: __init__.py  analyzer.py  concept_scorer.py  models.py  prompts.py  quote_extractor.py  segment_analyzer.py  sentiment.py  theme_extractor.py
src/consistency/: __init__.py  models.py  runner.py  scorecard.py
src/discussion/: __init__.py  llm_client.py  models.py  moderator.py  participant.py  prompts.py  simulator.py  transcript.py
src/persona_engine/: __init__.py  consumer_behavior.py  demographics.py  diversity.py  generator.py  models.py  opinion_seeder.py  psychographics.py  voice.py
src/report/: __init__.py  charts.py  generator.py  models.py
src/tests/: __init__.py  conftest.py  test_analyzer.py  test_charts.py  test_concept_scorer.py  test_demographics.py  test_diversity.py  test_generator.py  test_large_pools.py  test_llm_client.py  test_moderator.py  test_opinion_seeder.py  test_opinion_shift.py  test_participant.py  test_psychographics.py  test_report_generator.py  test_scorecard.py  test_segment_analyzer.py  test_sentiment_analyzer.py  (+3 more)
validation/: analyze.py  reddit_post.md  run_synthetic.sh
(+15 files in other folders)
